Fix leaving group not working